--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -96,3 +96,24 @@
 	note = {Accedido: 13/02/2019}
 }
 
+@misc{cicloVida,
+	title = {Actividades},
+	author = {Academia Android},
+	howpublished = {\url{https://developer.android.com/guide/components/activities}},
+	note = {Accedido: 14/02/2019}
+}
+
+@misc{conexionws,
+	title = {Apache HttpComponents},
+	author = {Apache},
+	howpublished = {\url{https://hc.apache.org/}},
+	note = {Accedido: 16/02/2019}
+}
+
+@misc{httpComponents,
+	title = {HttpComponents},
+	author = {Andalucia},
+	howpublished = {\url{http://www.juntadeandalucia.es/servicios/madeja/contenido/recurso/243}},
+	note = {Accedido: 16/02/2019}
+}
+
