--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -117,3 +117,37 @@
 	note = {Accedido: 16/02/2019}
 }
 
+@misc{firebase1,
+	title = {Firebase Documentation},
+	author = {Firebase},
+	howpublished = {\url{https://firebase.google.com/docs/}},
+	note = {Accedido: 18/02/2019}
+}
+
+@misc{firebase2,
+	title = {?`{{Q}}u{\'e} es Firebase de Google?},
+	author = {Miguh Ruiz},
+	howpublished = {\url{https://openwebinars.net/blog/que-es-firebase-de-google/}},
+	note = {Accedido: 18/02/2019}
+}
+
+@misc{firebase3,
+	title = {Firebase, qu{\'e} es y para qu{\'e} sirve la plataforma de Google},
+	author = {Manuel Cardona},
+	howpublished = {\url{https://www.iebschool.com/blog/firebase-que-es-para-que-sirve-la-plataforma-desarroladores-google-seo-sem/}},
+	note = {Accedido: 18/02/2019}
+}
+
+@misc{picker,
+	title = {API Picker},
+	author = {Google},
+	howpublished = {\url{https://developers.google.com/places/android-sdk/placepicker?hl=es}},
+	note = {Accedido: 18/02/2019}
+}
+
+@misc{maps,
+	title = {Maps SDK for Android},
+	author = {Google},
+	howpublished = {\url{https://developers.google.com/maps/documentation/android-sdk/intro}},
+	note = {Accedido: 18/02/2019}
+}
