UI, geoposicionamiento, MPAndroidChart y OpenCSV

--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo2.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo2.tex
@@ -507,7 +507,7 @@ A continuación se enumeran las mismas junto a una breve descripción, teniendo en
 	
 	\item \textit{Google Services y Maps}: facilita la geolocalización de los usuarios mediante el uso de los sensores del dispositivo móvil, selección de localización manual mediante mapas (\textit{PlacePicker}) y permite la creación de mapas interactivos con la colocación de marcadores para la visualización de estadísticas.
 	
-	\item \textit{MPAndroidChart}: API que brinda la posibilidad de crear gráficos para la visualización de estadísticas en los resultados de encuestas.
+	\item \textit{MPAndroidChart}: librería que brinda la posibilidad de crear gráficos para la visualización de estadísticas en los resultados de encuestas.
 	
 	\item \textit{OpenCsv}: brinda la posibilidad de mapear los resultados de base de datos en un archivo del tipo .csv, pudiendo exportar los datos.
 	
