--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo2.bib
@@ -151,3 +151,24 @@
 	howpublished = {\url{https://developers.google.com/maps/documentation/android-sdk/intro}},
 	note = {Accedido: 18/02/2019}
 }
+
+@misc{mpandroidchart,
+	title = {MPAndroidChart},
+	author = {Philipp Jahoda},
+	howpublished = {\url{https://github.com/PhilJay/MPAndroidChart#quick-start}},
+	note = {Accedido: 19/02/2019}
+}
+
+@misc{opencsv,
+	title = {OpenCSV},
+	author = {OpenCSV},
+	howpublished = {\url{http://opencsv.sourceforge.net/}},
+	note = {Accedido: 19/02/2019}
+}
+
+@misc{locationservice,
+	title = {LocationServices},
+	author = {Google},
+	howpublished = {\url{https://developers.google.com/android/reference/com/google/android/gms/location/LocationServices}},
+	note = {Accedido: 16/02/2019}
+}
